--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.3.22",
+    "@ai-sdk/react": "^1.2.10",
+    "@google-cloud/local-auth": "2.1.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "ai": "^4.3.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^105.0.0",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "openai": "^4.96.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
     "supabase": "^2.22.6",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
