--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/azure": "^1.3.22",
     "@ai-sdk/react": "^1.2.10",
     "@google-cloud/local-auth": "2.1.0",
+    "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
