--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^105.0.0",
+    "linkedin-post-share": "^1.1.15",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
