--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,16 +11,15 @@
   "dependencies": {
     "@ai-sdk/azure": "^1.3.22",
     "@ai-sdk/react": "^1.2.10",
-    "@google-cloud/local-auth": "2.1.0",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
     "ai": "^4.3.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "google-auth-library": "^9.15.1",
-    "googleapis": "^105.0.0",
     "linkedin-post-share": "^1.1.15",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
