--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/azure": "^1.3.22",
+    "@ai-sdk/google": "^1.2.16",
     "@ai-sdk/react": "^1.2.10",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.49.4",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
     "ai": "^4.3.12",
@@ -24,11 +22,9 @@
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "openai": "^4.96.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
-    "supabase": "^2.22.6",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
